src/objects/Line_Item_Employee__c.object
<CustomObject>
    <description>Used to associate an employee(s) to each Charge Item.</description>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Point to the employee you wish to connect to the Reservation Line Item.</description>
        <label>Employee</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Line Item Employees</relationshipLabel>
        <relationshipName>Reservation_Line_Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipName>Line_Item_Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points the employee to the desired Event Charge Item.</description>
        <label>Line Item</label>
        <referenceTo>Line_Item__c</referenceTo>
        <relationshipName>Line_Item_Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Split_Amount__c</fullName>
        <label>Split Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Line Item Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ECIE-{00000}</displayFormat>
        <label>Line Item Employee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Item Employees</pluralLabel>
    <recordTypes>
        <fullName>Gratuity_Split</fullName>
        <active>true</active>
        <label>Gratuity Split</label>
    </recordTypes>
    <recordTypes>
        <fullName>Line_Item_Employee</fullName>
        <active>true</active>
        <label>Line Item Employee</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>